test/compile_errors/stage1/obj/saturating_shl_does_not_allow_negative_rhs_at_comptime.zig
export fn a() void {
    _ = @as(i32, 1) <<| @as(i32, -2);
}

// saturating shl does not allow negative rhs at comptime
//
// error: shift by negative value -2
